--- a/aula1/index.html
+++ b/aula1/index.html
@@ -6,6 +6,10 @@
     <title>Matricula de Aluno</title>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -36,7 +40,7 @@
             <img src="images/Group.svg" />
           </section>
           <section>
-            <h1>Porque cada momento de aprendizado conta</h1>
+            <h1>Porque cada momento de <span>aprendizado</span> conta</h1>
             <p>
               Inscreva seu filho em nossa escola e veja-o florescer em um ambiente
               acolhedor, seguro e estimulante
