feat(js): adicionando código de exemplos de fundamentos js

--- a/aula1/index.html
+++ b/aula1/index.html
@@ -80,7 +80,7 @@
 
           <div>
             <label for="nomeCompletoResponsavel">Nome Completo do responsável</label>
-            <input type="text" id="nomeCompletoResponsavel" required/>
+            <input type="text" id="nomeCompletoResponsavel" class="nomeCompletoResponsavel" required/>
           </div>
 
           <div>
